# Banjo-recomp-android

./: source_logic_level2.txt
.github/workflows/: analysis.yml  android.yml
Android/: build.gradle  gradle.properties  settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt
Android/app/src/main/cpp/emulator/: pi_hle.cpp  resource_mgr.cpp  stubs.cpp
Android/app/src/main/cpp/menu/: menu.cpp  menu.hpp
Android/app/src/main/cpp/tools/: rare_decompression.cpp  rare_decompression.h
Android/app/src/main/cpp/ultra/: NativeBridge.cpp  NativeBridge.hpp  assets_manifest.h  audio_helper.cpp  exceptasm.cpp  libm_vals.cpp  n64_types.h  otr_builder.cpp  otr_builder.h  parameters.cpp  setintmask.cpp
Android/app/src/main/java/com/bkawrapper/: GLRenderer.java  MainActivity.java  Menu.java  MenuController.java  NativeBridge.java  OtrService.java
Android/app/src/main/res/layout/: activity_main.xml  menu.xml  menu_overlay.xml  progress_overlay.xml
Android/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
scripts/: ast_scanner.py  build_driver.py  dynamic_corrector.py  error_parser.py  generate_icons.py  patch_array_initializations.py  patch_engine.py  patch_engine_2.py  sanitize_codebase.py  sanitize_legacy_code.py  source_conversion.py
scripts/conversion_logic/: globals.txt  macros.txt  opaque.txt  replacements.txt  source_logic_audio_fix.txt  source_logic_level1.txt  source_logic_level2.txt  source_logic_level3_cpp.txt  types.txt
